[package]
name = "kaleidoscope"
version = "0.5.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"
# We need Rust >=1.65 for std::backtrace.
rust-version = "1.65.0"

[dependencies]
#alloy = {git = "https://github.com/mrd0ll4r/alloy"}
alloy = { path = "../alloy" }
anyhow = {version="1.0.75", features = []}
log = { version = "0.4", features = ["std", "serde"] }
flexi_logger = { version = "0.29" }
serde = {version="1.0.104",features=["derive"]}
serde_json = "1.0.46"
serde_yaml = "0.9.25"
itertools = "0.14.0"
statistical = "1.0.0"

# Tokio, Lua, Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-stream = "0.1"
futures = "0.3"
interpolation = "0.3.0"
noise = "0.9.0"
chrono = {version="0.4", features = ["clock"]}
reqwest = {version= "0.12.4", default-features = false, features = ["json","rustls-tls"]}
# Do not upgrade this -- it depends on home@0.9.11, which is unbuildable on our old hardware.
mlua = { version = "=0.9.9", features = ["lua54", "send", "vendored"], default-features = false }

# Prometheus
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.0", features = ["process"] }
lazy_static = "1"

# HTTP API
warp = "0.3.6"
